# Arc

./: .gitignore  Makefile  README.md  TODO.md
clipd/: Cargo.toml  README.md
clipd/src/: main.rs
mobile/: gradlew  gradlew.bat  keystore.properties.example  settings.gradle.kts
mobile/app/: build.gradle.kts
src/: app_services.go  app_services_test.go  clipboard_flow.go  clipd_embed.go  clipd_embed_stub.go  draw.go  field.go  go.mod  go.sum  hosts.go  hosts_test.go  infra_packages.go  infra_packages_test.go  infra_shell_steps.go  infra_steps.go  infra_steps_test.go  infra_types.go  infra_wireguard_steps.go  layout.go  local_prompt.go  local_prompt_test.go  main.go  mobile_payload.go  mobile_payload_test.go  model.go  nfs_flow.go  nfs_flow_test.go  pair_mobile.go  pair_mobile_test.go  remote_nftables.go  remote_pairing.go  ssh_hardening.go  ssh_hardening_test.go  ssh_known_hosts.go  ssh_known_hosts_test.go  ssh_setup.go  ssh_setup_test.go  template.go  theme.go  util.go  (+7 more)
src/components/: draw.go  field.go  layout.go  render_log_card.go  render_remote_card.go  render_root.go  render_root_test.go  theme.go  types.go  util.go
src/templates/: arc_clipboard_sync.service.tmpl  arc_clipd.service.tmpl  arc_waypipe.service.tmpl  prompt_local.bash  prompt_local.zsh  prompt_remote.bash  prompt_remote.zsh  ssh_ensure_arc_authorized_key.sh.tmpl  ssh_ensure_arc_bash_prompt.sh.tmpl  ssh_ensure_arc_hushlogin.sh.tmpl  ssh_ensure_arc_sudoers.sh.tmpl  ssh_ensure_arc_tmux_conf.sh.tmpl  ssh_ensure_arc_user.sh.tmpl  ssh_ensure_arc_zsh_prompt.sh.tmpl  ssh_harden_server_access.sh.tmpl  (+1 more)
(+50 files in other folders)
